# cookiecutter-data-science

./: .gitignore  README.md  ToDo.MD  config.yaml  cookiecutter.json  requirements.txt
docs/docs/: index.md
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
tests/: conftest.py  test_creation.py
{{ cookiecutter.repo_name }}/: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  manifest.yml  pyproject.toml  requirements.txt  setup.py
{{ cookiecutter.repo_name }}/docker/: dockerfile.serve  dockerfile.train
{{ cookiecutter.repo_name }}/docs/: Makefile  conf.py  make.bat
{{ cookiecutter.repo_name }}/reports/: risk_management_report.md
{{ cookiecutter.repo_name }}/src/: setup.py
{{ cookiecutter.repo_name }}/src/tests/: test_default_utils.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: __init__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/data/: cleaning_utils.py  read_utils.py  utils.py  write_utils.py
