[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }}"]
readme = "README.md"
license="{{ cookiecutter.open_source_license }}"
packages = [
    { include = "src/{{ cookiecutter.repo_name }}" },
]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
confuse = "^2.0.0"
pyarrow = "^11.0.0"
tqdm = "^4.64.1"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
jupyter = "^1.0.0"
nbstripout = "^0.6.1"
black = "^23.1.0"
flake8 = "^6.0.0"
pre-commit = "^3.0.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"


[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"
autodoc = "^0.5.0"
docutils = "^0.19"
pydot = "^1.4.2"
graphviz = "^0.20.1"
rstcheck = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
