[tool.poetry]
name = "{{ cookiecutter.repo_name }}"
version = "0.1.0"
description = "A short description of the project."
authors = ["name <email>"]
readme = "README.md"
license="No license file"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
scikit-learn = "^1.2.1"
pandas = "^1.5.3"
pyarrow = "^11.0.0"
tqdm = "^4.64.1"
pydantic = "^2.5.2"
hydra-core = "^1.3.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
jupyter = "^1.0.0"
nbstripout = "^0.6.1"
black = "^23.1.0"
conventional-pre-commit = "v3.1.0"
pre-commit = "^3.0.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
flake8 = "^6.0.0"
pandas-stubs = "^1.5.3.230214"


[tool.poetry.group.doc.dependencies]
sphinx = "^6.1.3"
sphinx-autobuild = "^2021.3.14"
autodoc = "^0.5.0"
docutils = "^0.19"
pydot = "^1.4.2"
graphviz = "^0.20.1"
rstcheck = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
test = 'test:test'